--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,6 +15,15 @@
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
+        <div class="date thumbs">
+            <a href="{% url 'post_like' pk=post.pk %}"><span class="glyphicon glyphicon-thumbs-up"></span></a>{{ post.likes_count }}
+            &nbsp;|&nbsp; 
+            <a href="{% url 'post_dislike' pk=post.pk %}"><span class="glyphicon glyphicon-thumbs-down"></span></a> {{ post.dislikes_count }}
+            <br/>
+            {{ likes_percent|floatformat:1 }}%
+            &nbsp;|&nbsp;
+            {{ dislikes_percent|floatformat:1 }} %
+        </div>
     </div>
     <hr>
         <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
